[tool.poetry]
name = "sync-git-trello"
version = "0.1.0"
description = ""
authors = ["Mariano Ferro <ferro.mariano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-trello = "^0.20.1"
pygithub = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
